--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<html>
-<body>
-  <h1>Welcome to Troop 280 Website on Git Hub!</h1>  
-</body>
-</html>
+# Header 1
+## Header 2
+### Header 3
+
+  Welcome to Troop 280 Website on Git Hub!
