--- a/index.html
+++ b/index.html
@@ -1,5 +1,35 @@
+
 <html>
-  <body>
-  Welcome to Troop 280 Website on Git Hub! Today
-  </body>
+<body bgcolor=#F8F7CF>
+<center>
+<table cellpadding=10><tr valign=middle>
+<td bgcolor=#2A3257 valign=middle>
+<img src="BSA-logo.gif" align=left>
+<center><font face="tahoma" size=5 color=#FFFFFF><B>
+Boy Scout Troop 280<BR>(Chandler, Arizona)<P>Webelos Weekend Registration</B></FONT></center>
+</td></tr>
+<tr><td bgcolor=#FFFFFF align=center>
+<h2><i>Details for our 2019 event will be available soon!</i></h2>
+<h2><i><a href="http://www.troop280az.org">Visit our Website</a></i></h2>
+<h1>Wow!  What a great time! Thanks for attending!</h1>
+<h2>Here is what we did last time for Webelos Weekend...</h2>
+<img src="fortnite.jpg">
+
+<h3>Get a glimps of all the fun you can have when you join Boy Scouts!<h3>
+<h3>Earn requirements for your Arrow of Light!<h3>
+<h3><i>Learn leadership and skills that you will use thoughout your life!</i></h3>
+
+<table width=600><tr><td>
+Webelos Weekend is an overnight camping event where active Troop 280 Boy Scouts give
+Webelos participants a taste of what fun Boy Scouting can be. We will have many exciting
+<B><U>Fortnite</U></B> themed activities such as zombie head removal, infection, fire starting, llama get-away, and more! Webelos and their parent(s) will enjoy a delicious dinner, an
+entertaining campfire program on Saturday, and a Scout-led Inter-faith service Sunday
+morning.
+</td>
+<td><image src="fortnite_llama.jpg"></td>
+</tr></table>
+
+
+</center>
+</body>
 </html>
