--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <center>
 <table cellpadding=10><tr valign=middle>
 <td bgcolor=#2A3257 valign=middle>
-<img src="BSA-logo.gif" align=left>
+<img src="img/BSA-logo.gif" align=left>
 <center><font face="tahoma" size=5 color=#FFFFFF><B>
 Boy Scout Troop 280<BR>(Chandler, Arizona)<P>Webelos Weekend Registration</B></FONT></center>
 </td></tr>
@@ -13,7 +13,7 @@ Boy Scout Troop 280<BR>(Chandler, Arizona)<P>Webelos Weekend Registration</B></F
 <h2><i><a href="http://www.troop280az.org">Visit our Website</a></i></h2>
 <h1>Wow!  What a great time! Thanks for attending!</h1>
 <h2>Here is what we did last time for Webelos Weekend...</h2>
-<img src="fortnite.jpg">
+<img src="img/fortnite.jpg">
 
 <h3>Get a glimps of all the fun you can have when you join Boy Scouts!<h3>
 <h3>Earn requirements for your Arrow of Light!<h3>
@@ -26,7 +26,7 @@ Webelos participants a taste of what fun Boy Scouting can be. We will have many 
 entertaining campfire program on Saturday, and a Scout-led Inter-faith service Sunday
 morning.
 </td>
-<td><image src="fortnite_llama.jpg"></td>
+<td><image src="img/fortnite_llama.jpg"></td>
 </tr></table>
 
 
