--- a/registration.html
+++ b/registration.html
@@ -1,36 +1,47 @@
-<html><body>
-<div style="background: #2A3257; color: white">
-    <div style="float:left;"><img src="https://thumbs2.imgbox.com/bf/db/yhQa92K8_b.gif" alt="BSA"/></div>
-<div style="font-weight:bold; font-size:24pt; margin-left: 10px;">Webelos Weekend Registration</div>
-<div style="font-weight:bold; font-size: 14pt;; margin-left: 10px;margin-top: -20px;">
-Boy Scout Troop 280 (Chandler, Arizona)
-</div>
-</div>
-<div style="font-weight:bold; font-size: 18pt;">Join Us for Webelos Weekend!</div>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><META http-equiv="Content-Type" content="text/html; charset=utf-8"></head><body>
 
-<div style="font-weight:bold; font-size: 14pt;">Get a glimps of all the fun you can have when you join Boy Scouts!</div>
-<div style="font-weight:bold; font-size: 14pt;">Earn requirements for your Arrow of Light!</div>
-<div style="font-weight:bold; font-size: 14pt;"><i>Learn leadership and skills that you will use thoughout your life!</i></div>
+<div bgcolor="#F8F7CF">
+<center>
+<table cellpadding="10"><tr valign="middle">
+<td bgcolor="#2A3257" valign="middle">
+<img src="img/BSA-logo.png" align="left">
+<center><font face="tahoma" size="5" color="#FFFFFF"><b>
+Boy Scout Troop 280<br>(Chandler, Arizona)<p>Webelos Weekend Registration</p></b></font></center>
+</td></tr>
+<tr><td bgcolor="#FFFFFF" align="center">
+<h1>Join Us for Webelos Weekend!</h1>
+<img src="img/fortnite.jpg">
+
+<h3>Get a glimps of all the fun you can have when you join Boy Scouts!<h3>
+<h3>Earn requirements for your Arrow of Light!<h3>
+<h3><i>Learn leadership and skills that you will use thoughout your life!</i></h3>
 
 <table width="600"><tr><td>
-Webelos Weekend is an overnight camping event where active Troop 280 Boy Scouts give Webelos participants a taste of what fun Boy Scouting can be. We will have many exciting <b> <u>Fortnite</u></b> themed activities such as zombie head removal, infection, fire starting, llama get-away, and more! Webelos and their parent(s) will enjoy a delicious dinner, an entertaining campfire program on Saturday, and a Scout-led Inter-faith service Sunday morning.
+Webelos Weekend is an overnight camping event where active Troop 280 Boy Scouts give
+Webelos participants a taste of what fun Boy Scouting can be. We will have many exciting
+<b><u>Fortnite</u></b> themed activities such as zombie head removal, infection, fire starting, llama get-away, and more! Webelos and their parent(s) will enjoy a delicious dinner, an
+entertaining campfire program on Saturday, and a Scout-led Inter-faith service Sunday
+morning.
 </td>
+<td></td>
 </tr></table>
 
-<hr>
-<div style="font-weight:semi-bold; font-size: 13pt;"><div>When:  January 12th & 13th, 2019</div>
-<div style="margin-top: -5px;">Where:  Heard Scout Pueblo</div>
-<div>1901 E. Dobbins, Phoenix, AZ</div>
-</div>
+<br><hr><br>
+<h3>When:  January 12th &amp; 13th, 2019</h3>
+<h3>Where:  Heard Scout Pueblo<br>1901 E. Dobbins, Phoenix, AZ</h3>
+
 <p>
 
 <table width="600"><tr><td>
-This event is free to all 2nd year Webelos and one (1) parent.  Additional attendees are $10 each, to be collected at the event.  Saturday night dinner and dutch oven desserts will be provided by the troop.  Have lunch before you arrive, and bring any snacks for Saturday and your favorite breakfast for Sunday morning.  You will need a tent, sleeping bag and warm clothes for this exciting overnight adventure.  If you are unable to stay for the overnight, please plan on staying for the campfire program which should end at approximately 8:30pm.
+This event is free to all 2nd year Webelos and one (1) parent.  Additional attendees are $10 each, to be collected at the event.  Saturday night dinner 
+and dutch oven desserts will be provided by the troop.  Have lunch before you arrive, and bring any snacks for Saturday and your favorite breakfast for Sunday morning.  You will need a tent, sleeping bag and warm clothes for this exciting overnight adventure.  If you are unable to stay for 
+the overnight, please plan on staying for the campfire 
+program which should end at approximately 8:30pm.
 </td></tr></table>
 
 
 <h4><u>Saturday Jan. 12th</u></h4>
-<h4>12:30pm Check-In & Camp Set-up</h4>
+<h4>12:30pm Check-In &amp; Camp Set-up</h4>
 <h4>2:00pm Opening Flag Ceremony</h4>
 <h4>2:30 - 4:30pm  Fun Scouting Actvities
 <h4>5:30pm Dinner</h4>
@@ -56,5 +67,74 @@ This event is free to all 2nd year Webelos and one (1) parent.  Additional atten
 You will recieve a confirmation email.  <p>
 If you have trouble or issues with this form, <br>
 please contact <a href="mailto:drew@odsy.com" target="_blank">webelosweekend@troop280az.org</a></p></h3>
-</body>
-</html>
+
+<form action="http://www.azscouting.org/webelosweekend/wform_mail.php" method="post" target="_blank" onsubmit="try {return window.confirm(&quot;This form may not function properly due to certain security constraints.\nContinue?&quot;);} catch (e) {return false;}"> 
+    
+    <table>
+        <tbody>
+            <tr>
+                <td align="right">Webelos Scout Name:</td>
+                <td><input type="text" name="Webelosname" size="40"></td>
+            </tr>
+            <tr>
+                <td align="right">Parent Name:</td>
+                <td><input type="text" name="Parentname" size="40"></td>
+            </tr>
+            <tr>
+                <td align="right">Phone Number:</td>
+                <td><input type="text" name="Phone" size="40"></td>
+            </tr>
+            <tr>
+                <td align="right">Email:</td>
+                <td><input type="text" name="Email" size="40"></td>
+            </tr>
+            <tr>
+                <td align="right">Number of People Attending:</td>
+                <td><input type="text" name="Attending" size="6"></td>
+            </tr>
+            <tr>
+                <td align="right">Your Pack Number:</td>
+                <td><input type="text" name="Pack" size="6"></td>
+            </tr>
+            <tr>
+                <td align="right">Will you be camping overnight?</td>
+                <td> <input type="radio" name="Camping" value="Yes" checked>Yes
+  				 
+  				<input type="radio" name="Camping" value="No">No
+                </td>
+            </tr>
+            <tr>
+                <td align="right">Will you stay for Orienteering hike Sunday morning?</td>
+                <td> <input type="radio" name="Hiking" value="Yes" checked>Yes
+  				 
+  				<input type="radio" name="Hiking" value="No">No
+                </td>
+            </tr>
+            <tr>
+                <td align="right">Any allergies or dietary concerns?<br><i>If, yes, please indicate details below.</i></td>
+                <td> <input type="radio" name="Allergies" value="Yes">Yes
+  				 
+  				<input type="radio" name="Allergies" value="No" checked>No
+                </td>
+            </tr>
+            <tr>
+                <td align="center" colspan="2"><br>
+                Any other specific requests, issues or questions:
+                <p>
+                <textarea name="Comments" cols="40" rows="5">Type comments here.</textarea>
+                </p>
+                </td>
+            </tr>
+            <tr>
+                <td align="center" colspan="2">
+                <input type="submit" name="submit" value="submit"></td>
+            </tr>
+        </tbody>
+    </table>
+</form>
+
+</p></h4></p></h4></p></h3></h3></h3></h3></td></tr></table>
+
+</center>
+</div>
+</body></html>
