--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 
 <html>
+  <head>
+    <title>Webelos Weekend - Troop 280 AZ</title>
+  </head>
 <body bgcolor=#F8F7CF>
 <center>
 <table cellpadding=10><tr valign=middle>
