--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Webelos Weekend - Troop 280 AZ</title>
-    <link rel="icon" type="image/png" href="img/favicon32.png" />
+    <link rel="icon" type="image/png" href="img/favicon32.png">
   </head>
 <body bgcolor=#F8F7CF>
 <center>
