--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Webelos Weekend - Troop 280 AZ</title>
-    <link rel="icon" type="image/png" href="img/favicon32.png">
+    <link rel="shortcut icon" type="image/png" href="img/favicon32.png">
   </head>
 <body bgcolor=#F8F7CF>
 <center>
@@ -14,8 +14,7 @@ Boy Scout Troop 280<BR>(Chandler, Arizona)<P>Webelos Weekend Registration</B></F
 </td></tr>
 <tr><td bgcolor=#FFFFFF align=center>
 <h2><i>Details for our 2019 event will be available soon!</i></h2>
-<h2><i><a href="http://www.troop280az.org">Visit our Website</a></i></h2>
-  <h3>TEST</h3>
+<h2><i><a href="http://www.troop280az.org">Visit our Website</a></i></h2>  
 <h1>Wow!  What a great time! Thanks for attending!</h1>
 <h2>Here is what we did last time for Webelos Weekend...</h2>
 <img src="img/fortnite.jpg">
