--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
   <head>
-    <title>Webelos Weekend - Troop 280 AZ</title>
+    <title>Troop 280 Webelos Weekend Registration</title>
     <link rel="shortcut icon" type="image/png" href="img/favicon32.png">
   </head>
 <body bgcolor=#F8F7CF>
