--- a/registration.html
+++ b/registration.html
@@ -1,4 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><META http-equiv="Content-Type" content="text/html; charset=utf-8"></head><body>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <META http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Troop 280 Webelos Weekend Registration</title>
+    <link rel="shortcut icon" type="image/png" href="img/favicon32.png">
+  </head>    
+<body>
 
 <div bgcolor="#F8F7CF">
 <center>
