--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Webelos participants a taste of what fun Boy Scouting can be. We will have many 
 entertaining campfire program on Saturday, and a Scout-led Inter-faith service Sunday
 morning.
 </td>
-<td><image src="img/Minecraft_creeper.jpg"></td>
+<td><image src="img/minecraft_creeper.jpg"></td>
 </tr></table>
 
 
