--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 Boy Scout Troop 280<BR>(Chandler, Arizona)<P>Webelos Weekend Registration</B></FONT></center>
 </td></tr>
 <tr><td bgcolor=#FFFFFF align=center>
-<h2><i>Details for our 2019 event will be available soon!</i></h2>
+<h2><i>Details for our 2020 event will be available soon!</i></h2>
 <h2><i><a href="http://www.troop280az.org">Visit our Website</a></i></h2>  
 <h1>Wow!  What a great time! Thanks for attending!</h1>
 <h2>Here is what we did last time for Webelos Weekend...</h2>
@@ -24,7 +24,7 @@ Boy Scout Troop 280<BR>(Chandler, Arizona)<P>Webelos Weekend Registration</B></F
 <table width=600><tr><td>
 Webelos Weekend is an overnight camping event where active Troop 280 Boy Scouts give
 Webelos participants a taste of what fun Boy Scouting can be. We will have many exciting
-<B><U>Fortnite</U></B> themed activities such as zombie head removal, infection, fire starting, llama get-away, and more! Webelos and their parent(s) will enjoy a delicious dinner, an
+<B><U>Minecraft</U></B> themed activities such as zombie head removal, infection, fire starting, llama get-away, and more! Webelos and their parent(s) will enjoy a delicious dinner, an
 entertaining campfire program on Saturday, and a Scout-led Inter-faith service Sunday
 morning.
 </td>
