--- a/registration.html
+++ b/registration.html
@@ -25,9 +25,9 @@ Boy Scout Troop 280<br>(Chandler, Arizona)<p>Webelos Weekend Registration</p></b
 
 <table width="600"><tr><td>
 Webelos Weekend is an overnight camping event where active Troop 280 Boy Scouts give
-Webelos participants a taste of what fun Boy Scouting can be. We will have many exciting
-<b><u>Fortnite</u></b> themed activities such as zombie head removal, infection, fire starting, llama get-away, and more! Webelos and their parent(s) will enjoy a delicious dinner, an
-entertaining campfire program on Saturday, and a Scout-led Inter-faith service Sunday
+Webelos participants a taste of what fun Boyt Scouting can be. We will have many exciting
+<b><u>Minecraft</u></b> themed activities. Webelos and their parent(s) will enjoy a delicious dinner, an
+entertaining campfire program on Saturday, and a Scout-led Inter-faih service Sunday
 morning.
 </td>
 <td></td>
