--- a/registration.html
+++ b/registration.html
@@ -34,8 +34,8 @@ morning.
 </tr></table>
 
 <br><hr><br>
-<h3>When:  January 12th &amp; 13th, 2019</h3>
-<h3>Where:  Heard Scout Pueblo<br>1901 E. Dobbins, Phoenix, AZ</h3>
+<h3>When:  November 9thth &amp; 10th, 2019</h3>
+<h3>Where:  Heard Scout Pueblo<br>1901 E. Dobbins, Phoenix, AZ 85042</h3>
 
 <p>
 
@@ -47,7 +47,7 @@ program which should end at approximately 8:30pm.
 </td></tr></table>
 
 
-<h4><u>Saturday Jan. 12th</u></h4>
+<h4><u>Saturday Nov. 9th</u></h4>
 <h4>12:30pm Check-In &amp; Camp Set-up</h4>
 <h4>2:00pm Opening Flag Ceremony</h4>
 <h4>2:30 - 4:30pm  Fun Scouting Actvities
@@ -58,7 +58,7 @@ program which should end at approximately 8:30pm.
 
 <p>
 
-<h4><u>Sunday Jan. 13th</u></h4>
+<h4><u>Sunday Nov. 10th</u></h4>
 <h4>7:30am Interfaith Service</h4>
 <h4>8:00am Breakfast on Your Own
 <h4>8:30 - 10:00am Orienteering Course</h4>
