--- a/registration.html
+++ b/registration.html
@@ -25,7 +25,7 @@ Boy Scout Troop 280<br>(Chandler, Arizona)<p>Webelos Weekend Registration</p></b
 
 <table width="600"><tr><td>
 Webelos Weekend is an overnight camping event where active Troop 280 Boy Scouts give
-Webelos participants a taste of what fun Boyt Scouting can be. We will have many exciting
+Webelos participants a taste of what fun Boy Scouting can be. We will have many exciting
 <b><u>Minecraft</u></b> themed activities. Webelos and their parent(s) will enjoy a delicious dinner, an
 entertaining campfire program on Saturday, and a Scout-led Inter-faih service Sunday
 morning.
@@ -34,20 +34,23 @@ morning.
 </tr></table>
 
 <br><hr><br>
-<h3>When:  November 9thth &amp; 10th, 2019</h3>
-<h3>Where:  Heard Scout Pueblo<br>1901 E. Dobbins, Phoenix, AZ 85042</h3>
+<table>
+    <tr><td><h3>When:</h3></td><td><h3>&nbsp;November 9th &amp; 10th, 2019</h3></td></tr>
+    <tr><td valign="top"><h3>Where:</h3></td><td><h3>&nbsp;Heard Scout Pueblo<br>&nbsp;1901 E. Dobbins, Phoenix, AZ 85042</h3></td></tr>
+</table>
 
 <p>
 
 <table width="600"><tr><td>
 This event is free to all 2nd year Webelos and one (1) parent.  Additional attendees are $10 each, to be collected at the event.  Saturday night dinner 
-and dutch oven desserts will be provided by the troop.  Have lunch before you arrive, and bring any snacks for Saturday and your favorite breakfast for Sunday morning.  You will need a tent, sleeping bag and warm clothes for this exciting overnight adventure.  If you are unable to stay for 
+and dutch oven desserts will be provided by the troop.  Have lunch before you arrive, and bring any snacks for Saturday. You will need a tent, sleeping bag and warm clothes for this exciting overnight adventure.  If you are unable to stay for 
 the overnight, please plan on staying for the campfire 
 program which should end at approximately 8:30pm.
 </td></tr></table>
 
 
 <h4><u>Saturday Nov. 9th</u></h4>
+<h4>12:00pm Arrive</h4>
 <h4>12:30pm Check-In &amp; Camp Set-up</h4>
 <h4>2:00pm Opening Flag Ceremony</h4>
 <h4>2:30 - 4:30pm  Fun Scouting Actvities
@@ -60,8 +63,8 @@ program which should end at approximately 8:30pm.
 
 <h4><u>Sunday Nov. 10th</u></h4>
 <h4>7:30am Interfaith Service</h4>
-<h4>8:00am Breakfast on Your Own
-<h4>8:30 - 10:00am Orienteering Course</h4>
+<h4>8:00am Breakfast provided by Troop 280</h4>
+<h4>8:30 - 10:00am Hike</h4>
 <h4>10:00am Break Down Camp and Depart</h4>
 
 <p>
@@ -73,7 +76,7 @@ program which should end at approximately 8:30pm.
 <h3>Please complete and submit the following form for your registration.<br>
 You will recieve a confirmation email.  <p>
 If you have trouble or issues with this form, <br>
-please contact <a href="mailto:drew@odsy.com" target="_blank">webelosweekend@troop280az.org</a></p></h3>
+please contact <a href="mailto:admin@troop280az.org" target="_blank">webelosweekend@troop280az.org</a></p></h3>
 
 <iframe width="100%" height="1295" allowTransparency="true" frameborder="0" scrolling="no" style="border:none" src="https://www.emailmeform.com/builder/embed/36ainYN6Ef8AWlS7"><a href="https://www.emailmeform.com/builder/embed/36ainYN6Ef8AWlS7">Fill out form.</a></iframe>
 
