--- a/registration.html
+++ b/registration.html
@@ -48,24 +48,25 @@ the overnight, please plan on staying for the campfire
 program which should end at approximately 8:30pm.
 </td></tr></table>
 
-
-<h4><u>Saturday Nov. 9th</u></h4>
-<h4>12:00pm Arrive</h4>
-<h4>12:30pm Check-In &amp; Camp Set-up</h4>
-<h4>2:00pm Opening Flag Ceremony</h4>
-<h4>2:30 - 4:30pm  Fun Scouting Actvities
-<h4>5:30pm Dinner</h4>
-<h4>6:30pm Dutch Oven Dessert Cook-Off</h4>
-<h4>7:30pm Campfire Program</h4>
-<h4>10:00pm Lights Out</h4>
-
+<table style="margin-top: 30px; font-weight:bold; font-size:1em;">
+    <tr><th colspan="2"><u>Saturday Nov. 9th</u></th></tr>
+    <tr><td>12:00 pm</td><td>Arrive at Heard Scout Pueblo</td></tr>
+    <tr><td>12:30 pm</td><td>Check-In &amp; Camp Set-up</td></tr>
+    <tr><td>&nbsp;&nbsp;2:00 pm</td><td>Opening Flag Ceremony</td></tr>
+    <tr><td>&nbsp;&nbsp;2:30 - 4:30 pm&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Fun Scouting Actvities</td></tr>
+    <tr><td>&nbsp;&nbsp;5:30 pm</td><td>Dinner</td></tr>
+    <tr><td>&nbsp;&nbsp;6:30 pm</td><td>Dutch Oven Dessert Cook-Off</td></tr>
+    <tr><td>&nbsp;&nbsp;7:30 pm</td><td>Campfire Program</td></tr>
+    <tr><td>10:00 pm</td><td>Lights Out</td></tr>
+</table>
 <p>
-
-<h4><u>Sunday Nov. 10th</u></h4>
-<h4>7:30am Interfaith Service</h4>
-<h4>8:00am Breakfast provided by Troop 280</h4>
-<h4>8:30 - 10:00am Hike</h4>
-<h4>10:00am Break Down Camp and Depart</h4>
+<table style="margin-top: 30px; font-weight:bold; font-size:1em;">
+    <tr><th colspan="2"><u>Sunday Nov. 10th</u></h4></th></tr>
+    <tr><td>&nbsp;&nbsp;7:30 am</td><td>Interfaith Service</td></tr>
+    <tr><td>&nbsp;&nbsp;8:00 am</td><td>Breakfast provided by Troop</td></tr>
+    <tr><td>&nbsp;&nbsp;8:30- 10:00 am&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Hike</td></tr>
+    <tr><td>10:00 am</td><td>Break down Camp and Depart</td></tr>
+</table>
 
 <p>
 
