--- a/index.html
+++ b/index.html
@@ -1,37 +1,88 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>Troop 280 Webelos Weekend Registration</title>
+    <META http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>BSA Troops 280 and 3280 - Webelos Weekend Registration</title>
     <link rel="shortcut icon" type="image/png" href="img/favicon32.png">
-  </head>
-<body bgcolor=#F8F7CF>
+  </head>    
+<body>
+
+<div bgcolor="#F8F7CF">
 <center>
-<table cellpadding=10><tr valign=middle>
-<td bgcolor=#2A3257 valign=middle>
-<img src="img/BSA-logo.png" align=left>
-<center><font face="tahoma" size=5 color=#FFFFFF><B>
-Boy Scout Troop 280<BR>(Chandler, Arizona)<P>Webelos Weekend Registration</B></FONT></center>
+<table cellpadding="10"><tr valign="middle">
+<td bgcolor="#2A3257" valign="middle">
+<img src="img/BSA-logo.png" align="left">
+<center><font face="tahoma" size="5" color="#FFFFFF"><b>
+BSA Troops 280 and 3280<br>(Chandler, Arizona)<p>Webelos Weekend Registration</p></b></font></center>
 </td></tr>
-<tr><td bgcolor=#FFFFFF align=center>
-<h2><i>Details for our 2019 event will be available soon!</i></h2>
-<h2><i><a href="http://www.troop280az.org">Visit our Website</a></i></h2>  
-<h1>Wow!  What a great time! Thanks for attending!</h1>
-<h2>Here is what we did last time for Webelos Weekend...</h2>
-<img src="img/fortnite.jpg">
-<h3>Get a glimps of all the fun you can have when you join Boy Scouts!<h3>
+<tr><td bgcolor="#FFFFFF" align="center">
+<h1>Join Us for Webelos Weekend!</h1>
+<img src="img/minecraft3.png">
+
+<h3>Get a glimpse of all the fun you can have when you join Scouts!<h3>
 <h3>Earn requirements for your Arrow of Light!<h3>
 <h3><i>Learn leadership and skills that you will use thoughout your life!</i></h3>
 
-<table width=600><tr><td>
-Webelos Weekend is an overnight camping event where active Troop 280 Boy Scouts give
-Webelos participants a taste of what fun Boy Scouting can be. We will have many exciting
-<B><U>Fortnite</U></B> themed activities such as zombie head removal, infection, fire starting, llama get-away, and more! Webelos and their parent(s) will enjoy a delicious dinner, an
+<table width="600"><tr><td>
+Webelos Weekend is an overnight camping event where active BSA Troops 280 (Boys) and 3280 (Girls) give
+Webelos participants a taste of what fun Scouting can be. We will have many exciting
+<b><u>Minecraft</u></b> themed activities. Webelos and their parent(s) will enjoy a delicious dinner, an
 entertaining campfire program on Saturday, and a Scout-led Inter-faith service Sunday
 morning.
 </td>
-<td><image src="img/fortnite_llama.jpg"></td>
+<td></td>
 </tr></table>
 
+<br><hr><br>
+<table>
+    <tr><td><h3>When:</h3></td><td><h3>&nbsp;November 9th &amp; 10th, 2019</h3></td></tr>
+    <tr><td valign="top"><h3>Where:</h3></td><td><h3>&nbsp;Heard Scout Pueblo<br>&nbsp;1901 E. Dobbins, Phoenix, AZ 85042</h3></td></tr>
+</table>
+
+<p>
+
+<table width="600"><tr><td>
+This event is free to all 2nd year Webelos and one (1) parent.  Additional attendees are $10 each, to be collected at the event.  Saturday night dinner 
+and dutch oven desserts will be provided by the troop.  Have lunch before you arrive, and bring any snacks for Saturday. You will need a tent, sleeping bag and warm clothes for this exciting overnight adventure.  If you are unable to stay for 
+the overnight, please plan on staying for the campfire 
+program which should end at approximately 8:30 pm.
+</td></tr></table>
+
+<table style="margin-top: 30px; font-weight:bold; font-size:1em;">
+    <tr><th colspan="2"><u>Saturday Nov. 9th</u></th></tr>
+    <tr><td>12:00 pm</td><td>Arrive at Heard Scout Pueblo</td></tr>
+    <tr><td>12:30 pm</td><td>Check-In &amp; Camp Set-up</td></tr>
+    <tr><td>&nbsp;&nbsp;2:00 pm</td><td>Opening Flag Ceremony</td></tr>
+    <tr><td>&nbsp;&nbsp;2:30 pm - 4:30 pm&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Fun Scouting Actvities</td></tr>
+    <tr><td>&nbsp;&nbsp;5:30 pm</td><td>Dinner</td></tr>
+    <tr><td>&nbsp;&nbsp;6:30 pm</td><td>Dutch Oven Dessert Cook-Off</td></tr>
+    <tr><td>&nbsp;&nbsp;7:30 pm</td><td>Campfire Program</td></tr>
+    <tr><td>10:00 pm</td><td>Lights Out</td></tr>
+</table>
+<p>
+<table style="margin-top: 30px; font-weight:bold; font-size:1em;">
+    <tr><th colspan="2"><u>Sunday Nov. 10th</u></h4></th></tr>
+    <tr><td>&nbsp;&nbsp;7:30 am</td><td>Interfaith Service</td></tr>
+    <tr><td>&nbsp;&nbsp;8:00 am</td><td>Breakfast provided by Troop</td></tr>
+    <tr><td>&nbsp;&nbsp;8:30 am - 10:00 am&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Hike</td></tr>
+    <tr><td>10:00 am</td><td>Break down Camp and Depart</td></tr>
+</table>
+
+<p>
+
+<br><hr><br>
+
+
+<h1>Yes! I will attend Webelos Weekend!</h1>
+<h3>Please complete and submit the following form for your registration.<br>
+You will recieve a confirmation email.  <p>
+If you have trouble or issues with this form, <br>
+please contact <a href="mailto:admin@troop280az.org" target="_blank">webelosweekend@troop280az.org</a></p></h3>
+
+<iframe width="100%" height="1295" allowTransparency="true" frameborder="0" scrolling="no" style="border:none" src="https://www.emailmeform.com/builder/embed/36ainYN6Ef8AWlS7"><a href="https://www.emailmeform.com/builder/embed/36ainYN6Ef8AWlS7">Fill out form.</a></iframe>
+
+</p></h4></p></h4></p></h3></h3></h3></h3></td></tr></table>
 
 </center>
-</body>
-</html>
+</div>
+</body></html>
