--- a/registration.html
+++ b/registration.html
@@ -72,7 +72,14 @@ program which should end at approximately 8:30 pm.
 
 <br><hr><br>
 
-
+<h1>Registration for Webelos Weekend is now Closed</h1>
+<!--  
+<h3>Please complete and submit the following form for your registration.<br>
+You will recieve a confirmation email.  <p>
+If you have trouble or issues with this form, <br>
+please contact <a href="mailto:admin@troop280az.org" target="_blank">webelosweekend@troop280az.org</a></p></h3>
+-->
+<!--
 <h1>Yes! I will attend Webelos Weekend!</h1>
 <h3>Please complete and submit the following form for your registration.<br>
 You will recieve a confirmation email.  <p>
@@ -80,6 +87,7 @@ If you have trouble or issues with this form, <br>
 please contact <a href="mailto:admin@troop280az.org" target="_blank">webelosweekend@troop280az.org</a></p></h3>
 
 <iframe width="100%" height="1295" allowTransparency="true" frameborder="0" scrolling="no" style="border:none" src="https://www.emailmeform.com/builder/embed/36ainYN6Ef8AWlS7"><a href="https://www.emailmeform.com/builder/embed/36ainYN6Ef8AWlS7">Fill out form.</a></iframe>
+-->
 
 </p></h4></p></h4></p></h3></h3></h3></h3></td></tr></table>
 
