--- a/registration.html
+++ b/registration.html
@@ -16,7 +16,8 @@
 BSA Troops 280 and 3280<br>(Chandler, Arizona)<p>Webelos Weekend Registration</p></b></font></center>
 </td></tr>
 <tr><td bgcolor="#FFFFFF" align="center">
-<h1>Join Us for Webelos Weekend!</h1>
+<h1>Registration for Webelos Weekend is now Closed</h1>
+<!--<h1>Join Us for Webelos Weekend!</h1>-->
 <img src="img/minecraft3.png">
 
 <h3>Get a glimpse of all the fun you can have when you join Scouts!<h3>
@@ -72,7 +73,6 @@ program which should end at approximately 8:30 pm.
 
 <br><hr><br>
 
-<h1>Registration for Webelos Weekend is now Closed</h1>
 <!--  
 <h3>Please complete and submit the following form for your registration.<br>
 You will recieve a confirmation email.  <p>
