--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ an entertaining campfire program on Saturday, and a Scout-led Interfaith service
     <tr><th colspan="2"><u>Sunday Nov. 8th</u></h4></th></tr>
     <tr><td>&nbsp;&nbsp;7:30 am</td><td>Interfaith Service</td></tr>
     <tr><td>&nbsp;&nbsp;8:00 am</td><td>Breakfast provided by Troop</td></tr>
-    <tr><td>&nbsp;&nbsp;8:30 - 10:00 am&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Hike (tentative)</td></tr>
-    <tr><td>10:00 am</td><td>Break down Camp and Depart</td></tr>
+    <tr><td>&nbsp;&nbsp;8:30 am - 12:00 pm&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Hike (tentative)</td></tr>
+    <tr><td>12:00 pm</td><td>Break down Camp and Depart</td></tr>
 </table>
 
 <p>
