--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@ BSA Troops 280 and 3280<br>(Chandler, Arizona)<p>Webelos Weekend Registration</p
 </td></tr>
 <tr><td bgcolor="#FFFFFF" align="center">
 <h1>Join Us for Webelos Weekend!</h1>
-<img src="img/super-heros.png">
+<img src="img/among_us.png">
 
 <h3>Get a glimps of all the fun you can have when you join Boy Scouts!<h3>
 <h3>Earn requirements for your Arrow of Light!<h3>
 <h3><i>Learn leadership and skills that you will use thoughout your life!</i></h3>
 
 <table width="600"><tr><td>
-Webelos Weekend is an overnight camping event where active BSA Troops 280 (Boys) and 3280 (Girls) give 
-Webelos participants a taste of what fun Scouting can be. We will have many exciting 
-  <b>Superhero</b> themed activities. Webelos and their parent(s) will enjoy a delicious dinner, an entertaining 
+Come for the day or camp overnight for our Webelos Weekend event where BSA Troops 280 (boys) and 3280 (girls) 
+give Webelos participants a taste of what fun Scouting can be. We will have many exciting 
+<b>Glow in the Dark Among Us</b> themed activities. 
+<br>
+Webelos and their parent(s) will enjoy a delicious dinner, an entertaining 
 campfire program on Saturday, and a Scout-led Interfaith service Sunday morning.
 </td>
 <td></td>
@@ -34,22 +36,14 @@ campfire program on Saturday, and a Scout-led Interfaith service Sunday morning.
 
 <br><hr><br>
 <table>
-    <tr><td><h3>When:</h3></td><td><h3>&nbsp;November 7th &amp; 8th, 2020</h3></td></tr>
+    <tr><td><h3>When:</h3></td><td><h3>&nbsp;November 9th &amp; 10th, 2021</h3></td></tr>
     <tr><td valign="top"><h3>Where:</h3></td><td><h3>&nbsp;Heard Scout Pueblo<br>&nbsp;1901 E. Dobbins, Phoenix, AZ 85042</h3></td></tr>
 </table>
 
-<p>
-
-<table width="600"><tr><td>
-Webelos Weekend is an overnight camping event where active BSA Troops 280 (Boys) and 3280 (Girls) give Webelos participants a taste of what
-fun Scouting can be. We will have many exciting Superhero themed activities. Webelos and their parent(s) will enjoy a delicious dinner, 
-an entertaining campfire program on Saturday, and a Scout-led Interfaith service Sunday morning.
-</td></tr></table>
-
 <table style="margin-top: 30px; font-weight:bold; font-size:1em;">
-    <tr><th colspan="2"><u>Saturday Nov. 7th</u></th></tr>
-    <tr><td>2:00 pm</td><td>Arrive at Heard Scout Pueblo</td></tr>
-    <tr><td>2:30 pm</td><td>Check-In &amp; Camp Set-up</td></tr>
+    <tr><th colspan="2"><u>Saturday Nov. 9th</u></th></tr>
+    <tr><td>&nbsp;&nbsp;2:00 pm</td><td>Arrive at Heard Scout Pueblo</td></tr>
+    <tr><td>&nbsp;&nbsp;2:30 pm</td><td>Check-In &amp; Camp Set-up</td></tr>
     <tr><td>&nbsp;&nbsp;3:00 pm</td><td>Opening Flag Ceremony</td></tr>
     <tr><td>&nbsp;&nbsp;3:30 - 5:30 pm&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Fun Scouting Actvities</td></tr>
     <tr><td>&nbsp;&nbsp;5:30 pm</td><td>Dinner (Made by scouts)</td></tr>
@@ -59,11 +53,11 @@ an entertaining campfire program on Saturday, and a Scout-led Interfaith service
 </table>
 <p>
 <table style="margin-top: 30px; font-weight:bold; font-size:1em;">
-    <tr><th colspan="2"><u>Sunday Nov. 8th</u></h4></th></tr>
+    <tr><th colspan="2"><u>Sunday Nov. 10th</u></h4></th></tr>
     <tr><td>&nbsp;&nbsp;7:30 am</td><td>Interfaith Service</td></tr>
     <tr><td>&nbsp;&nbsp;8:00 am</td><td>Breakfast provided by Troop</td></tr>
     <tr><td>&nbsp;&nbsp;8:30 am - 12:00 pm&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Hike Geronimo Trail (5 miles)</td></tr>
-    <tr><td>12:00 pm</td><td>Break down Camp and Depart</td></tr>
+    <tr><td>&nbsp;12:00 pm</td><td>Break down Camp and Depart</td></tr>
 </table>
 
 <p>
