--- a/registration.html
+++ b/registration.html
@@ -54,10 +54,10 @@ campfire program on Saturday, and a Scout-led Interfaith service Sunday morning.
 
 <table style="margin-top: 40px; font-weight:bold; font-size:1em;">
     <tr><th colspan="2"><u>Sunday Nov. 10th</u></h4></th></tr>
-    <tr><td>&nbsp;&nbsp;7:30 am</td><td>Interfaith Service</td></tr>
-    <tr><td>&nbsp;&nbsp;8:00 am</td><td>Breakfast provided by Troop</td></tr>
-    <tr><td>&nbsp;&nbsp;8:30 am - 12:00 pm&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Hike Geronimo Trail (5 miles)</td></tr>
-    <tr><td>&nbsp;12:00 pm</td><td>Break down Camp and Depart</td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;7:30 am</td><td>Interfaith Service</td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;8:00 am</td><td>Breakfast provided by Troop</td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;8:30 am - 12:00 pm&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Hike Geronimo Trail (5 miles)</td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;12:00 pm</td><td>Break down Camp and Depart</td></tr>
 </table>
 
 <p>
