--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ BSA Troops 280 and 3280<br>(Chandler, Arizona)<p>Webelos Weekend Registration</p
 Come for the day or camp overnight for our Webelos Weekend event where BSA Troops 280 (boys) and 3280 (girls) 
 give Webelos participants a taste of what fun Scouting can be. We will have many exciting 
 <b>Glow in the Dark Among Us</b> themed activities. 
-<br>
+<p>
 Webelos and their parent(s) will enjoy a delicious dinner, an entertaining 
 campfire program on Saturday, and a Scout-led Interfaith service Sunday morning.
 </td>
@@ -51,13 +51,13 @@ campfire program on Saturday, and a Scout-led Interfaith service Sunday morning.
     <tr><td>&nbsp;&nbsp;7:30 pm</td><td>Campfire Program</td></tr>
     <tr><td>10:00 pm</td><td>Lights Out</td></tr>
 </table>
-<p>
-<table style="margin-top: 30px; font-weight:bold; font-size:1em;">
+
+<table style="margin-top: 40px; font-weight:bold; font-size:1em;">
     <tr><th colspan="2"><u>Sunday Nov. 10th</u></h4></th></tr>
-    <tr><td>&nbsp;&nbsp;7:30 am</td><td>Interfaith Service</td></tr>
-    <tr><td>&nbsp;&nbsp;8:00 am</td><td>Breakfast provided by Troop</td></tr>
-    <tr><td>&nbsp;&nbsp;8:30 am - 12:00 pm&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Hike Geronimo Trail (5 miles)</td></tr>
-    <tr><td>&nbsp;12:00 pm</td><td>Break down Camp and Depart</td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;7:30 am</td><td>Interfaith Service</td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;8:00 am</td><td>Breakfast provided by Troop</td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;8:30 am - 12:00 pm&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Hike Geronimo Trail (5 miles)</td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;12:00 pm</td><td>Break down Camp and Depart</td></tr>
 </table>
 
 <p>
