--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ BSA Troops 280 and 3280<br>(Chandler, Arizona)<p>Webelos Weekend Registration</p
 </td></tr>
 <tr><td bgcolor="#FFFFFF" align="center">
 <h1>Join Us for Webelos Weekend!</h1>
-<img src="img/History.png">
+<img src="img/history.png">
 
 <h3>Get a glimps of all the fun you can have when you join Boy Scouts!<h3>
 <h3>Earn requirements for your Arrow of Light!<h3>
