--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ campfire program on Saturday, and a Scout-led Interfaith service Sunday morning.
     <tr><th colspan="2"><u>Sunday Nov. 13th</u></h4></th></tr>
     <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;7:30 am</td><td>Interfaith Service</td></tr>
     <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;8:00 am</td><td>Breakfast provided by Troop</td></tr>
-    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;8:30 am - 10:00 pm&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Hike Geronimo Trail (5 miles)</td></tr>
-    <tr><td>&nbsp;&nbsp;&nbsp;10:00 pm</td><td>Break down Camp and Depart</td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;8:30 am - 10:00 am&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Hike Geronimo Trail (5 miles)</td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;10:00 am</td><td>Break down Camp and Depart</td></tr>
 </table>
 
 <p>
