--- a/registration.html
+++ b/registration.html
@@ -19,7 +19,9 @@
                 <h1>Join Us for Webelos Weekend!</h1>
                 <img  src="img/harry-potter.png">
 
-                <h3>Get a glimpse of all the fun you can have when you join Boy Scouts!<h3>
+                <h3>Get a glimpse of all the fun you can have when you join Scouts BSA!<h3>
+                    <h3>Earn requirements for your Arrow of Light!<h3>
+                        <h3><i>Learn leadership and skills that you will use thoughout your life!</i></h3>!<h3>
                     <h3>Earn requirements for your Arrow of Light!<h3>
                         <h3><i>Learn leadership and skills that you will use thoughout your life!</i></h3>
 
